--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper</artifactId>
+            <version>9.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
