--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/OnlineEventPlanningSystem?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=23923
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+
+
+spring.mvc.view.suffix=.jsp
