--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.generate-ddl=true
 
 
 spring.mvc.view.suffix=.jsp
+
+#spring.datasource.url=jdbc:mysql://btfmfpmfmt5o5ajuqzje-mysql.services.clever-cloud.com:3306/btfmfpmfmt5o5ajuqzje?createDatabaseIfNotExist=true
+#spring.datasource.username=uukic610kxkpjcp6
+#spring.datasource.password=Y040WECyRjQ91htqO7Hg
