--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/OnlineEventPlanningSystem?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=23923
-
+spring.datasource.password
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
