--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/OnlineEventPlanningSystem?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password
+spring.datasource.password=23923
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,6 +10,8 @@ spring.jpa.generate-ddl=true
 
 
 spring.mvc.view.suffix=.jsp
+
+spring.devtools.restart.enabled = false
 
 #spring.datasource.url=jdbc:mysql://btfmfpmfmt5o5ajuqzje-mysql.services.clever-cloud.com:3306/btfmfpmfmt5o5ajuqzje?createDatabaseIfNotExist=true
 #spring.datasource.username=uukic610kxkpjcp6
