--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.mvc.view.suffix=.jsp
 
 spring.devtools.restart.enabled = false
 
+logging.file.name=logs/application.log
+
 #spring.datasource.url=jdbc:mysql://btfmfpmfmt5o5ajuqzje-mysql.services.clever-cloud.com:3306/btfmfpmfmt5o5ajuqzje?createDatabaseIfNotExist=true
 #spring.datasource.username=uukic610kxkpjcp6
 #spring.datasource.password=Y040WECyRjQ91htqO7Hg
